added the render file for deployment and frontend code

--- a/face_recognition_sys/frontend/src/Components/WelcomeCard/WelcomeCard.css
+++ b/face_recognition_sys/frontend/src/Components/WelcomeCard/WelcomeCard.css
@@ -70,6 +70,10 @@
     max-height: 10rem;
   }
   .selected-image-card{
-    display: grid;
+    /* display: grid; */
     justify-content: center;
+  }
+  .close-detect-btn{
+    display: flex;
+    margin-top: 1rem;
   }
